# accesshub

./: .dockerignore  .env  .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
assets/: __init__.py  home.py  tailscale.py
cleaner/: __main__.py  expiry.py  run.py
config/: __init__.py  config.py
db/: __init__.py
examples/: fetch_acl.py  tailscalse_devices.py
slackbolt/: common.py  main.py  tailscale.py
slackbot/: __init__.py  common.py  grant.py  home.py  main.py  tailscale.py
tailscale/: __init__.py  client.py  errors.py  types.py
tailscale/api/devices/: list_tailnet_devices.py
tailscale/api/policyfile/: get_tailnet_acl.py  preview_rule_matches.py  set_tailnet_acl.py  validate_tailnet_acl.py
tailscale/models/: __init__.py  acl.py  device.py  list_tailnet_devices_fields.py  list_tailnet_devices_response.py
tests/: test_acl_backup.py  test_cleaner_expiry.py  test_config_env_parser.py  test_db_cas.py  test_format_duration.py  test_grant_mutation.py
utils/: backup.py
